# home-expense-tracker-python

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  README.md  build.ps1  build.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  sonar-project.properties
.github/workflows/: ci-cd.yml
app/: __init__.py  models.py
app/routes/: __init__.py  api.py  main.py  reports.py
app/templates/: index.html
docs/: DOCKER.md  GITHUB_ACTIONS_SETUP.md
tests/: conftest.py  test_api.py  test_models.py  test_reports.py
