[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "home-expense-tracker"
version = "1.0.0"
description = "A single-page Flask application for tracking home expenses"
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-CORS>=4.0.0",
    "python-dateutil>=2.8.2",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "flake8>=6.1.0",
    "pylint>=3.0.0",
    "black>=23.11.0",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903", "W0613"]

[tool.pylint.format]
max-line-length = 120
