[metadata]
name = home-expense-tracker
version = 1.0.0
description = A single-page Flask application for tracking home expenses
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Flask>=3.0.0
    Flask-SQLAlchemy>=3.1.1
    Flask-CORS>=4.0.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-html>=4.1.0
    flake8>=6.1.0
    pylint>=3.0.0
    black>=23.11.0

[tool:pytest]
testpaths = tests
python_files = test_*.py

[isort]
profile = black
line_length = 120
skip = migrations,.venv,venv

[pylint.messages_control]
disable = C0114,C0115,C0116,R0903,W0613

[pylint.format]
max-line-length = 120
